--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,7 @@
     "node": "6.x",
     "docs": "0.x"
   },
-  "scripts": {
-    "prereleasy": "bash lint.sh"
-  },
+  "scripts": {},
   "credentialType": "absolute",
   "policies": [
     {
