--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,14 @@
   "extends": "vtex",
   "root": true,
   "env": {
-    "node": true
+    "node": true,
+    "es6": true,
+    "jest": true
+  },
+  "rules": {
+    "no-console": "warn"
+  },
+  "globals": {
+    "metrics": true
   }
 }
